bytecode/examples/scope_error.lox
var a = 1;

{
  // error
  var a = a;
}

{
  // error
  var b = a;
  var b = a;
}
